@@ -152,12 +152,14 @@ static int sqlexec(sqlite3 *db, const char *cmd) {
     return rc;
 }
 
-static sqlite3_stmt *sqlprep(dbh_t *dbh, const char *cmd) {
+static sqlite3_stmt *sqlprep(dbh_t *dbh, const char *cmd, bool bailout /** exit on error? */) {
     const char *tail; /* dummy */
     sqlite3_stmt *ptr;
     if (sqlite3_prepare(dbh->db, cmd, strlen(cmd), &ptr, &tail) != SQLITE_OK) {
 	print_error(__FILE__, __LINE__, "cannot compile %s: %s\n", cmd, sqlite3_errmsg(dbh->db)); 
-	exit(EX_ERROR); 
+	if (bailout)
+	    exit(EX_ERROR);
+	return NULL;
     }
     return ptr;
 }
@@ -357,8 +359,16 @@ void *db_open(void *dummyenv, bfpath *bfp, dbmode_t mode)
      * dbh->insert is not here as it's needed earlier,
      * so it sets itself up lazily
      */
-    dbh->select = sqlprep(dbh, "SELECT value FROM bogofilter WHERE key=? LIMIT 1;");
-    dbh->delete = sqlprep(dbh, "DELETE FROM bogofilter WHERE(key = ?);");
+    dbh->select = sqlprep(dbh, "SELECT value FROM bogofilter WHERE key=? LIMIT 1;", false);
+    if (dbh->select == NULL)
+    {
+	fprintf(stderr,
+		"\nRemember to register some spam and ham messages before you\n"
+		"use bogofilter to evaluate mail for its probable spam status!\n\n");
+	exit(EX_ERROR);
+    }
+
+    dbh->delete = sqlprep(dbh, "DELETE FROM bogofilter WHERE(key = ?);", true);
 
     /* check if byteswapped */
     {
@@ -504,7 +514,7 @@ int db_set_dbvalue(void *vhandle, const dbv_t *key, const dbv_t *val) {
     dbh_t *dbh = vhandle;
 
     if (!dbh->insert)
-	dbh->insert = sqlprep(dbh, "INSERT OR REPLACE INTO bogofilter VALUES(?,?);");
+	dbh->insert = sqlprep(dbh, "INSERT OR REPLACE INTO bogofilter VALUES(?,?);", true);
 
     sqlite3_bind_blob(dbh->insert, 1, key->data, key->leng, SQLITE_STATIC);
     sqlite3_bind_blob(dbh->insert, 2, val->data, val->leng, SQLITE_STATIC);
